commit before exam.

--- a/report_08/src/CMakeLists.txt
+++ b/report_08/src/CMakeLists.txt
@@ -3,7 +3,8 @@ project(report_08 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
-add_executable(${PROJECT_NAME}
+add_executable(${PROJECT_NAME}_disk
         disk.cpp
+        #disk_Test.cpp
         #./main.cpp
         )
