--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@
 cmake_minimum_required(VERSION 3.10.2)
 project(CS302_OS LANGUAGES C CXX)
 
+set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11 -Wall -Wextra")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
@@ -14,6 +15,9 @@ include_directories(./include)
 #add_library(catch STATIC catch.hpp )
 #SET_TARGET_PROPERTIES(catch PROPERTIES LINKER_LANGUAGE CXX)
 
+add_subdirectory(lab01_code)
+add_subdirectory(lab03_code)
+add_subdirectory(report_02_lab03)
 add_subdirectory(report_03_lab05/src)
 add_subdirectory(report_05_lab08/src)
 add_subdirectory(report_06_lab09/src)
