Branch: master, fix-bug, now target link to c-math-library.
Signed-off-by: Killer_Quinn <51754303+Certseeds@users.noreply.github.com>

--- a/lab01_code/CMakeLists.txt
+++ b/lab01_code/CMakeLists.txt
@@ -8,3 +8,6 @@ include(${CMAKE_CURRENT_SOURCE_DIR}/../cmake/util.cmake)
 ADDEXEC(hello)
 ADDEXEC(opt)
 ADDEXEC(sqrt)
+target_link_libraries(${PROJECT_NAME}_hello m)
+target_link_libraries(${PROJECT_NAME}_opt m)
+target_link_libraries(${PROJECT_NAME}_sqrt m)
