--- a/lab01_code/CMakeLists.txt
+++ b/lab01_code/CMakeLists.txt
@@ -5,9 +5,9 @@ set(CMAKE_C_STANDARD 11)
 
 include(${CMAKE_CURRENT_SOURCE_DIR}/../cmake/util.cmake)
 
-ADDEXEC(hello)
-ADDEXEC(opt)
-ADDEXEC(sqrt)
-target_link_libraries(${PROJECT_NAME}_hello m)
-target_link_libraries(${PROJECT_NAME}_opt m)
-target_link_libraries(${PROJECT_NAME}_sqrt m)
+set(dependenciesOfMain hello opt sqrt)
+foreach (elementName IN LISTS dependenciesOfMain)
+    ADDEXEC(${elementName})
+    target_link_libraries(${PROJECT_NAME}_${elementName} m)
+endforeach ()
+unset(dependenciesOfMain)
