--- a/lab03_code/CMakeLists.txt
+++ b/lab03_code/CMakeLists.txt
@@ -5,12 +5,8 @@ set(CMAKE_C_STANDARD 11)
 
 include(${CMAKE_CURRENT_SOURCE_DIR}/../cmake/util.cmake)
 
-ADDEXEC(ABC)
-ADDEXEC(exec)
-ADDEXEC(fork)
-ADDEXEC(getpid)
-ADDEXEC(nwait)
-ADDEXEC(pfork)
-ADDEXEC(pipe)
-ADDEXEC(signal)
-ADDEXEC(wait)
+set(dependenciesOfMain ABC exec fork getpid nwait pfork pipe signal wait)
+foreach (elementName IN LISTS dependenciesOfMain)
+    ADDEXEC(${elementName})
+endforeach ()
+unset(dependenciesOfMain)
