--- a/report_06_lab09/src/CMakeLists.txt
+++ b/report_06_lab09/src/CMakeLists.txt
@@ -3,9 +3,5 @@ project(report_06_lab09 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
-add_executable(${PROJECT_NAME}
-        ./mm.cpp
-        ./free_block.hpp
-        ./allocated_block.hpp
-        ./functions.hpp
-        )
+
+add_executable(${PROJECT_NAME} ./mm.cpp)
